Fixed dependency warnings

--- a/src/index.threejs.njk
+++ b/src/index.threejs.njk
@@ -13,5 +13,5 @@
 {% endblock %}
 
 {% block script %}
-  <script src="{{ relative_dir }}indexTwojs.js"></script>
+  <script src="{{ relative_dir }}index.twojs.js"></script>
 {% endblock %}
